--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,23 @@
-version: '3.3'
+version: "3.3"
 networks:
   my_network:
     driver: bridge
 
 services:
   mongo-course:
-      image: mongo:latest
-      hostname: mongo-course
-      environment:
-        MONGO_INITDB_ROOT_USERNAME: root
-        MONGO_INITDB_ROOT_PASSWORD: password
-        MONGO_INITDB_DATABASE: course_eLearning
-      ports:
-        - "27019:27019"
-      container_name: mongo-course
-      networks:
-        - my_network
-      volumes:
-        - ./mongo-course/db:/data/db
+    image: mongo:latest
+    hostname: mongo-course
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_DATABASE: course_eLearning
+    ports:
+      - "27019:27019"
+    container_name: mongo-course
+    networks:
+      - my_network
+    volumes:
+      - ./mongo-course/db:/data/db
 
   mongo-user:
     image: mongo:latest
@@ -66,7 +66,7 @@ services:
       - DB_PASS=password
       - DB_NAME=course_eLearning
 
-  backend-course:  
+  backend-course:
     # image: public.ecr.aws/l4i7m7o8/rmit_e_learning_course_backend:latest
     image: rmit_e_learning_course_backend:latest
     container_name: backend-course
@@ -95,7 +95,7 @@ services:
       - my_network
     ports:
       - "6379:6379"
-    
+
   zoo1:
     image: zookeeper:3.4.9
     hostname: zoo1
@@ -112,22 +112,22 @@ services:
   kafka1:
     image: confluentinc/cp-kafka:5.5.3
     hostname: kafka1
+    container_name: kafka1
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka1:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka1:19092,LISTENER_DOCKER_EXTERNAL://kafka1:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
       KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
       KAFKA_BROKER_ID: 1
       KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    restart: always
     volumes:
       - ./zk-single-kafka-single/kafka1/data:/var/lib/kafka/data
     depends_on:
       - zoo1
-
-
 
 volumes:
   mongodb_data_container:
@@ -148,8 +148,8 @@ volumes:
   #     volumes:
   #       - ./my-database:/data/db
 
-  # 
-  
+  #
+
   # kong:
   #   image: kong:2.2.0
   #   environment:
@@ -178,5 +178,3 @@ volumes:
   #   deploy:
   #     restart_policy:
   #       condition: on-failure
-
-
